bin/kube/.generated/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: dirty-cups-frontend
  name: dirty-cups-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      run: dirty-cups-frontend
  template:
    metadata:
      labels:
        run: dirty-cups-frontend
    spec:
      containers:
      - env:
        - name: NODE_ENV
          value: local
        - name: NODE_PORT
          value: "3000"
        image: dirty-cups-frontend:local
        name: dirty-cups-frontend
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /app
          name: dirty-cups-frontend-volume
      volumes:
      - name: dirty-cups-frontend-volume
        hostPath:
          path: /hosthome/dean/Code/dirty-cups-frontend
      imagePullSecrets:
          - name: hycsecret
